# fast_voice_emotion_analysis_with_bert

./: README.md  pyproject.toml  transcriptions.txt
dev/: a.py  b.py
src/: emo.py  emo_trial.py  f.py  fast.py  fast2.py  fast3.py  fast4.py  fast5.py  fast6.py  fast7.py  fast8.py  fast9.py  foo.py  word2emotion_and_plotting.py
